[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ykconvert_YUKIN_PAN"
version = "0.0.1"
authors = [
  { name="Yukin Pan", email="panjiangtian@whu.edu.cn" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JiangtianPan/ykconvert"
"Bug Tracker" = "https://github.com/JiangtianPan/ykconvert/issues"